--- a/templates/engineer.html
+++ b/templates/engineer.html
@@ -1,4 +1,5 @@
-<div class="card employee-card">
+<!-- Engineer -->
+<div class="card bg-primary text-white employee-card m-5">
     <div class="card-header">
         <h2 class="card-title">{{ name }}</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>{{ role }}</h3>
