--- a/templates/manager.html
+++ b/templates/manager.html
@@ -1,14 +1,16 @@
 <!-- Manager -->
-<div class="card bg-primary text-white employee-card m-5">
-    <div class="card-header">
-        <h2 class="card-title">{{ name }}</h2>
-        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>{{ role }}</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: {{ id }}</li>
-            <li class="list-group-item">Email: <a href="mailto:{{ email }}">{{ email }}</a></li>
-            <li class="list-group-item">Office number: {{ officeNumber }}</li>
-        </ul>
+<div class="card-wrapper">
+    <div class="card bg-primary text-white employee-card m-5">
+        <div class="card-header">
+            <h2 class="card-title">{{ name }}</h2>
+            <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>{{ role }}</h3>
+        </div>
+        <div class="card-body">
+            <ul class="list-group">
+                <li class="list-group-item">ID: {{ id }}</li>
+                <li class="list-group-item">Email: <a href="mailto:{{ email }}">{{ email }}</a></li>
+                <li class="list-group-item">Office number: {{ officeNumber }}</li>
+            </ul>
+        </div>
     </div>
 </div>
