--- a/templates/main.html
+++ b/templates/main.html
@@ -20,7 +20,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="team-area col-md-12 d-flex justify-content-md-around flex-wrap">
                 {{ team }}
